@@ -9,6 +9,7 @@ Changes in 2.8.20
 - Bugfix photo name when assign student ID with leading 000 in Student.php
 - Add .odt, .ods & .odp (LibreOffice docs) to Portal Notes attached file in PortalNotes.php
 - Fix StudentGrades.php student Help text in Help_en.php
+- Fix Auto & Edit pull-downs options Advanced Search in Search.fnc.php
 
 Changes in 2.8.19
 -----------------
